--- a/app/src/main/res/layout/activity_appointment_list.xml
+++ b/app/src/main/res/layout/activity_appointment_list.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
 
     <RelativeLayout
@@ -57,49 +55,38 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/ic_baseline_person_pin_24" />
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/ListAppointment_image_listvaccin"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="325dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="40dp"
-            android:src="@drawable/vaccin" />
-
     </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Liste des rendez vous"
-        android:textSize="20dp"
-        android:textColor="@color/blue"
-        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp"/>
+        android:text="Liste des rendez vous"
+        android:textColor="@color/blue"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
-    <RelativeLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewAppointment"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="350dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        >
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewAppointment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-
-    </RelativeLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingbutton"
         android:layout_width="wrap_content"
-        android:layout_height="136dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="340dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
         android:backgroundTint="@color/blue"
+        android:contentDescription="TODO"
         android:src="@drawable/ic_baseline_add_24" />
 
 </LinearLayout>
