--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -32,16 +32,16 @@
             android:textColor="@color/black"
             android:textSize="23sp" />
 
-        <TextView
-            android:id="@+id/textview2"
-            android:layout_width="110dp"
-            android:layout_height="30dp"
+        <Button
+            android:id="@+id/mapsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="30dp"
             android:layout_toRightOf="@+id/centerName"
             android:background="@color/blue"
             android:paddingLeft="20dp"
-            android:text="Adresse"
+            android:text="Maps"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
